--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://aptxlabs.github.io/smellfeastfood/"
+baseURL: "https://smellfeastfood.com/"
 languageCode: "en-us"
 title: "Smell Feast Food"
 theme: "hugo-serifed-theme"
