--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'hugoserif@example.com'
-phone: '1800 123 000'
+email: 'director@smellfeastfood.com'
+phone: '+919096864704'
 contact_button_link: 'contact'
