--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,26 +9,36 @@ menu:
     - name: "Home"
       url: "/"
       weight: 1
+    - name: "About Us"
+      url: "/about/"
+      weight: 2
     - name: "Services"
       url: "/services/"
-      weight: 2
+      weight: 3
     - name: "Team"
       url: "/team/"
-      weight: 3
+      weight: 4
     - name: "Contact"
       url: "/contact/"
-      weight: 4
+      weight: 5
 
 # Params for theme
 params:
   google_analytics_id: ""
-  favicon: "favicon-32x32.svg"
+  favicon: "logo.webp"
+  homepage:
+    sticky_header: true
+    show_contact_box: true   # show / hide the contact box on the homepage
+    show_services_button: false  # show / hide the "view all services" button
+  footer:
+    copyright_text: "© 2025 Smell Feast Food. All Rights Reserved."
+
 
   logo:
-    mobile: "images/logo/logo-mobile.svg"
-    mobile_height: "36px"
-    desktop: "images/logo/logo.svg"
-    desktop_height: "36px"
+    mobile: "images/logo/logo.webp"
+    mobile_height: "64px"
+    desktop: "images/logo/logo.webp"
+    desktop_height: "64px"
     alt: "SmellFeast Food"
 
   fonts:
@@ -46,4 +56,4 @@ params:
   seo:
     meta_twitter_site: "@smellfeastfood"
     meta_twitter_creator: "@smellfeastfood"
-    meta_og_image: "images/og-image.png"
+    meta_og_image: "images/logo.webp"
